# frontend-repository

./: .gitignore  .replit  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  PLAN.md  README.md  add_criteria.py  add_webmcp.py  add_webmcp_schema.py  all_fails.txt  append_missing.mjs  checklist.txt  commit.sh  commit_message.txt  commit_wrapper.sh  conditional-motion.js  criteria.json  criteria.txt  dummy-video.sh  eslint.config.mjs  evaluate.js  expected_contract.txt  explore.js  final_tests.txt  finish.sh  fix-editor.js  fix-modal-motion.js  fix-page-motion.js  fix-page.js  fix.diff  fix_14.py  fix_accessibility.py  fix_all.js  fix_all_toml.py  fix_app.ts  fix_app18.js  fix_app_2.ts  fix_app_custom.ts  fix_app_focus.ts  (+320 more)
.cursor/: BUGBOT.md
.harden-locks/: frontend-creative-tools-material-ui-theme-creator.holdnote  frontend-creative-tools-prompt-workbench.holdnote  frontend-data-tracking-release-diff.holdnote  frontend-landing-wolverineworldwide.holdnote  frontend-planning-trip-itinerary.holdnote  frontend-productivity-loopdaily.holdnote
.locks/: hold-loopdaily.py  hold-readymag.py  hold-release-diff.py
.playwright-mcp/: page-2026-07-19T03-35-14-451Z.yml  page-2026-07-19T03-37-51-914Z.yml  (+2 more)
tasks/: _pins.py
tools/corpuscheck/: .gitignore  README.md  pyproject.toml
tools/corpuscheck/reports/: avax-phase0.json  avax-validate.json  cpa.json
tools/corpuscheck/src/corpuscheck/: cli.py  discovery.py  drift.py  reports.py  state.py  validate.py
tools/corpuscheck/tests/: test_mutations.py  test_nop_scaffold.py  test_record.py  test_reliability.py  test_state.py  test_static.py
(+13950 files in other folders)
